...
        return TLD_FALLBACK[tld]
    }

    companion object {
        private const val WHOIS_PORT = 43
        private const val MAX_HOPS = 3
        private const val IANA_SERVER = "whois.iana.org"
        private const val ARIN_SERVER = "whois.arin.net"

        private val TLD_FALLBACK = mapOf(
            "com"   to "whois.verisign-grs.com",
            "net"   to "whois.verisign-grs.com",
            "org"   to "whois.pir.org",
            "io"    to "whois.nic.io",
            "co.uk" to "whois.nic.uk",
            "uk"    to "whois.nic.uk",
            "de"    to "whois.denic.de",
...
